--- a/about.Rmd
+++ b/about.Rmd
@@ -1,18 +1,31 @@
 ---
-title: "Tuan-Dung Ngo"
+title: ""
 ---
+![.](anhjun1.png)
 
+Hello, I'm from [Hanoi](https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i), Vietnam. I am currently in [Grenoble](https://fr.wikipedia.org/wiki/Grenoble), France.
+
+My interest is in the Biomedical Sciences.
+
+I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. Visit our website here : [wwww.dongcuongdc.com](https://dongcuongdc.com)
 
 ###**Current work**
 
-I am a PhD student (2015 - 2018) in Biochemistry in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I am working on Microbiology and development of antimicrobial compounds    
+I am a PhD student (2015 - 2018) in Biochemistry and Microbiology in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I am working on virulence factors of pathogen and development of antimicrobial compounds.    
 
 My advisor is Mr. Eric Faudry (BIG/BCI/PBRC). Contact: eric.faudry@cea.fr  
 
-My PhD work funded by the associations: "Vaincre le mucovicidose" and "Gregory Lemarchal"  
+My PhD work is funded by the associations: "Vaincre la mucovicidose" and "Gregory Lemarchal"  
 
 My PhD defense will be held on February 6, 2019  
 
-[Thislink](#www.google.com)
+###**Education**
 
-[linked pharse](google.com)
+In 2009, I obtained my High School Graduation Certificate at Nguyen binh Khiem High school, Hanoi, vietnam 
+
+Then, I was in prepratory class at University of Communications and Transport, Hanoi, Vietnam.
+
+I came in France in 2010 and graduated from [Insa-Lyon](https://www.insa-lyon.fr/), an engineer school in applied sciences, in 2015. I have an engineer diploma in Biochemistry and Biotechnology.  
+
+Currently, I'm PhD student at [Doctoral school of Chemistry and Life Sciences of Grenoble](https://edcsv.univ-grenoble-alpes.fr/). 
+
