thay đoi thong tinh dong cuong dc

--- a/about.Rmd
+++ b/about.Rmd
@@ -7,9 +7,9 @@ Hello, I'm from [Hanoi](https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i), Viet
 
 My interest is in the Biomedical and Data Sciences.
 
-I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome all the Domestic and Foreign Investment.&nbsp;
-"To go further, we are together"&nbsp;
-Visit our website here : [www.dongcuongdc.com](https://dongcuongdc.com)
+I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome Domestic and Foreign Investment.&nbsp;
+To open up an opportunity of partnership, feel free to visit our website here : [www.dongcuongdc.com](https://dongcuongdc.com)&nbsp;
+"To go further, we go together"&nbsp;
 
 ###**Previous work**
 
@@ -29,5 +29,5 @@ Then, I was in prepratory class at University of Communications and Transport, H
 
 I came in France in 2010 and graduated from [Insa-Lyon](https://www.insa-lyon.fr/), an engineer school in applied sciences, in 2015. I have an engineer diploma in Biochemistry and Biotechnology.  
 
-Recently, I'm PhD student at [Doctoral school of Chemistry and Life Sciences of Grenoble, France](https://edcsv.univ-grenoble-alpes.fr/) where I got my PhD diploma in Microbiology. 
+Recently, I'm PhD student at [Doctoral school of Chemistry and Life Sciences of Grenoble ](https://edcsv.univ-grenoble-alpes.fr/) in France where I got my PhD diploma in Microbiology. 
 
