--- a/about.Rmd
+++ b/about.Rmd
@@ -7,9 +7,9 @@ Hello, I'm from [Hanoi](https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i), Viet
 
 My interest is in the Biomedical and Data Sciences.
 
-I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome Domestic and Foreign Investment.&nbsp;
-To open up an opportunity of partnership, feel free to visit our website here : [www.dongcuongdc.com](https://dongcuongdc.com)&nbsp;
-"To go further, we go together"&nbsp;
+I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome Domestic and Foreign Investment.<br/>
+To open up an opportunity of partnership, feel free to visit our website here : [www.dongcuongdc.com](https://dongcuongdc.com).
+"To go further, we go together"
 
 ###**Previous work**
 
