--- a/about.Rmd
+++ b/about.Rmd
@@ -7,13 +7,13 @@ Hello, I'm from [Hanoi](https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i), Viet
 
 My interest is in the Biomedical and Data Sciences.
 
-I am a shareholder of DongCuong-DC joint stock company in Vietnam. We have many projects on community healthcare and construction of infrastructure and urban. As a company, we encourage the cooperation and welcome Domestic and Foreign Investment.<br/>
-To open up an opportunity of partnership, feel free to visit our website here : [www.dongcuongdc.com](https://dongcuongdc.com).
-"To go further, we go together"
+Now, I am postdoc researcher in CBO and GBMS teams, [CERMAV](https://www.cermav.cnrs.fr/) laboratory (UPR 5301), CNRS, Grenoble, France, on a collaborative research project with SYNTHELIS and SANOFIS PASTEUR. 
+
+
 
 ###**Previous work**
 
-PhD student (Dec 2015 - Feb 2019) in Biochemistry and Microbiology in PBRC team, BCI laboratory, BIG, CEA, Grenoble, France. I worked on virulence factors of pathogen and development of antimicrobial compounds.    
+PhD student (Dec 2015 - Feb 2019) in Biochemistry and Microbiology in PBRC team (ERL5261), [BCI](http://www.bci-lab.fr/) laboratory (UMR1036), BIG, CEA, Grenoble, France. I worked on virulence factors of pathogen and development of antimicrobial compounds.    
 
 My advisor is Mr. Eric Faudry (BIG/BCI/PBRC). Contact: eric.faudry@cea.fr  
 
