--- a/index.Rmd
+++ b/index.Rmd
@@ -2,6 +2,6 @@
 title: "Welcome to my website!"
 ---
 
-My name is Tuan-Dung Ngo, I'm PhD in Microbiology. [Know more about me](about.html)
+My name is Tuan-Dung Ngo, I'm PhD in Biochemistry. [Know more about me](about.html)
 
 ![A view of Grenoble from Bastille fortress.](anhjun.png)
