update about page, CV page and new CV PDF 20/03/2021

--- a/about.Rmd
+++ b/about.Rmd
@@ -7,19 +7,21 @@ Hello, I'm from [Hanoi](https://vi.wikipedia.org/wiki/H%C3%A0_N%E1%BB%99i), Viet
 
 My interest is in the Biomedical and Data Sciences.
 
-Now, I am postdoc researcher in CBO and GBMS teams, [CERMAV](https://www.cermav.cnrs.fr/) laboratory (UPR 5301), CNRS, Grenoble, France, on a collaborative research project with SYNTHELIS and SANOFIS PASTEUR. 
+Now, I am postdoc researcher in Metals & Organs (Met&Or) team, [CBM](https://www.cbm-lab.fr/) laboratory, CEA-Grenoble, France, on the project of *Bio-orthogonal chemistry for the study of copper homeostasis in mammalian cells*. 
 
 
 
 ### **Previous work**
 
-PhD student (Dec 2015 - Feb 2019) in Biochemistry and Microbiology in PBRC team (ERL5261), [BCI](http://www.bci-lab.fr/) laboratory (UMR1036), BIG, CEA, Grenoble, France. I worked on virulence factors of pathogen and development of antimicrobial compounds.    
+- Postdoc researcher in CBO and GBMS teams, [CERMAV](www.cermav.cnrs.fr) laboratory (UPR 5301), CNRS, Grenoble, France, on a collaborative research project with [SYNTHELIS](https://www.synthelis.com/) and [SANOFIS PASTEUR](www.sanofi.com) *to develop a potential method in glycoprotein synthesis*.
 
-My advisor is Mr. Eric Faudry (BIG/BCI/PBRC). Contact: eric.faudry@cea.fr  
+- PhD student (Dec 2015 - Feb 2019) in Biochemistry and Microbiology in PBRC team (ERL5261), [BCI](http://www.bci-lab.fr/) laboratory (UMR1036), BIG, CEA, Grenoble, France. I worked on *virulence factors of Pseudomonas aeruginosa pathogen and the development of antimicrobial compounds*.    
 
-My PhD work is funded by the associations: "Vaincre la mucovicidose" and "Gregory Lemarchal"  
+  - My advisor is Mr. Eric Faudry (IRIG/BCI/PBRC). Contact: eric.faudry@cea.fr  
 
-My PhD defense was held on February 6, 2019  
+  - My PhD work is funded by the associations: "Vaincre la mucovicidose" and "Gregory Lemarchal"  
+
+  - My PhD defense was held on February 6, 2019  
 
 ### **Education**
 
